# chess-app

./: .editorconfig  .gitignore  DEVELOPMENT.md  Makefile  README.md  VISUAL_UPGRADE_PLAN.md  env.example
db/: add_best_move_columns.sql  blunder_taxonomy_schema.sql  drill_schema.sql  opening_and_filter_schema.sql  schema.sql
docs/: ANALYSIS_SPEC.md  FILTER_API_SPEC.md
web/: CLAUDE.md  next.config.ts  package-lock.json  package.json
web/public/: manifest.json  sw.js
web/scripts/: generate-icons.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AnalysisBoard.tsx  BlunderGalleryModal.tsx  ChessBoard.tsx  ChessPosition.tsx  CommandPalette.tsx  MoveList.tsx  ReactChessBoardBroken.tsx  ServiceWorkerRegistrar.tsx  SimpleBoard.tsx  TacticCard.tsx  TacticalInsightModal.tsx
web/src/lib/: openings.ts  (+2 more)
worker/: FIX_PI_DEPS.md  STOCKFISH_IMPROVEMENTS.md  __init__.py  aggregate_patterns.py  apply_blunder_schema.py  backfill_best_moves.py  backfill_blunder_categories.py  backfill_captured_pieces.py  backfill_checkmate_classification.py  backfill_fen_before.py  backfill_missed_tactics.py  backfill_opening_names.py  blunder_classifier.py  chess_insights.py  debug_agg.py  eco_openings.py  engine.py  fast_ingest.py  generate_positional_report.py  generate_study_guide.py  ingest.py  ingest_quick.py  ingest_recent.py  positional_classifier.py  pyproject.toml  query_study_data.py  reanalyze.py  requirements.txt  seed_one_month.py  setup_pi.sh  tactic_analyzer.py  test_performance.py  update_existing_games.py
worker/tests/: test_engine.py  test_ingest.py
(+81 files in other folders)
